--- a/Projekat/PuzzleStorm/ServerLobby/App.config
+++ b/Projekat/PuzzleStorm/ServerLobby/App.config
@@ -7,7 +7,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=160.99.38.140,14330; User ID=marija; Password=Marija552; initial catalog=db_storm; integrated security=false" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=160.99.38.140,14330; User ID=marija; Password=Marija552; initial catalog=db_puzzlestorm; integrated security=false" providerName="System.Data.SqlClient" />
     <add name="RabbitMQConnection" connectionString="amqp://ygunknwy:pAncRrH8Gxk3ULDyy-Wju7NIqdBThwCJ@sheep.rmq.cloudamqp.com/ygunknwy" />
   </connectionStrings>
 </configuration>
