--- a/Projekat/PuzzleStorm/DEBUGConsole/App.config
+++ b/Projekat/PuzzleStorm/DEBUGConsole/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+
+  <connectionStrings>
+    <add name="RabbitMQConnection" connectionString="amqp://ygunknwy:pAncRrH8Gxk3ULDyy-Wju7NIqdBThwCJ@sheep.rmq.cloudamqp.com/ygunknwy" />
+  </connectionStrings>
 </configuration>
