--- a/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
+++ b/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
@@ -57,10 +57,12 @@
     <Compile Include="Enums\RoomUpdateType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\ChangeRoomPropertiesRequest.cs" />
+    <Compile Include="Requests\ChangeStatusRequest.cs" />
     <Compile Include="Requests\CreateRoomRequest.cs" />
     <Compile Include="Requests\CancelRoomRequest.cs" />
     <Compile Include="Requests\GetAllRoomsRequest.cs" />
     <Compile Include="Requests\JoinRoomRequest.cs" />
+    <Compile Include="Requests\LeaveRoomRequest.cs" />
     <Compile Include="Requests\LoginRequest.cs" />
     <Compile Include="Requests\PostLoginRequest.cs" />
     <Compile Include="Requests\PreLoginRequest.cs" />
@@ -68,16 +70,20 @@
     <Compile Include="Requests\Request.cs" />
     <Compile Include="Requests\RoomCurrentStateRequest.cs" />
     <Compile Include="Requests\SignOutRequest.cs" />
+    <Compile Include="Requests\StartRoomRequest.cs" />
     <Compile Include="Responses\ChangeRoomPropertiesResponse.cs" />
+    <Compile Include="Responses\ChangeStatusResponse.cs" />
     <Compile Include="Responses\CreateRoomResponse.cs" />
     <Compile Include="Responses\CancelRoomResponse.cs" />
     <Compile Include="Responses\GetAllRoomsResponse.cs" />
     <Compile Include="Responses\JoinRoomResponse.cs" />
+    <Compile Include="Responses\LeaveRoomResponse.cs" />
     <Compile Include="Responses\LoginResponse.cs" />
     <Compile Include="Responses\RegistrationResponse.cs" />
     <Compile Include="Responses\Response.cs" />
     <Compile Include="Responses\RoomCurrentStateResponse.cs" />
     <Compile Include="Responses\SignOutResponse.cs" />
+    <Compile Include="Responses\StartRoomResponse.cs" />
     <Compile Include="SubDTOs\Player.cs" />
     <Compile Include="SubDTOs\RoomInfo.cs" />
   </ItemGroup>
