--- a/Projekat/PuzzleStorm/DEBUGConsole/DEBUGConsole.csproj
+++ b/Projekat/PuzzleStorm/DEBUGConsole/DEBUGConsole.csproj
@@ -65,12 +65,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Communicator\Communicator.csproj">
+      <Project>{d9c3538d-d17d-485e-a34a-4b2a7d1a332f}</Project>
+      <Name>Communicator</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DTOLibrary\DTOLibrary.csproj">
       <Project>{495fb5c5-301c-438d-9ddb-6baa4ce0bedd}</Project>
       <Name>DTOLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\StormCommonData\StormCommonData.csproj">
-      <Project>{74f9a2fc-687c-4c7b-a051-93ef8ec4f144}</Project>
+      <Project>{a13319c1-dba7-42c8-b5d2-6d96b3316b01}</Project>
       <Name>StormCommonData</Name>
     </ProjectReference>
   </ItemGroup>
