--- a/Projekat/PuzzleStorm/Client/App.config
+++ b/Projekat/PuzzleStorm/Client/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <connectionStrings>
+    <add name="RabbitMQConnection" connectionString="host=sheep.rmq.cloudamqp.com;virtualHost=ygunknwy;username=ygunknwy;password=pAncRrH8Gxk3ULDyy-Wju7NIqdBThwCJ;timeout=0" />
+  </connectionStrings>
 </configuration>
