--- a/Projekat/PuzzleStorm/StormCommonData/StormCommonData.csproj
+++ b/Projekat/PuzzleStorm/StormCommonData/StormCommonData.csproj
@@ -42,13 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\LogMessageType.cs" />
+    <Compile Include="Enums\OperationStatus.cs" />
     <Compile Include="Enums\PuzzleDifficulty.cs" />
+    <Compile Include="Enums\RoomPlayerUpdateType.cs" />
     <Compile Include="Enums\RoomState.cs" />
+    <Compile Include="Enums\RoomUpdateType.cs" />
     <Compile Include="Events\LogMessageArgs.cs" />
-    <Compile Include="Events\PuzzleStormEventArgs.cs" />
+    <Compile Include="Events\StormEventArgs.cs" />
+    <Compile Include="RouteGenerator.cs" />
     <Compile Include="Interfaces\IStormServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StormUtils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
