--- a/Projekat/PuzzleStorm/Client/Client.csproj
+++ b/Projekat/PuzzleStorm/Client/Client.csproj
@@ -9,6 +9,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>if_puzzle_40829.ico</ApplicationIcon>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -380,6 +383,9 @@
     <Resource Include="Images\PomocnaSlagalica\image_part_014.jpg" />
     <Resource Include="Images\PomocnaSlagalica\image_part_015.jpg" />
     <Resource Include="Images\PomocnaSlagalica\image_part_016.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="if_puzzle_40829.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.2.2.1.0\build\net452\Fody.targets" Condition="Exists('..\packages\Fody.2.2.1.0\build\net452\Fody.targets')" />
