--- a/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
+++ b/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broadcasts\BroadcastMessage.cs" />
+    <Compile Include="Broadcasts\RoomReadyUpdate.cs" />
     <Compile Include="Broadcasts\RoomsStateUpdate.cs" />
     <Compile Include="Broadcasts\RoomPlayerUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Requests\JoinRoomRequest.cs" />
     <Compile Include="Requests\LeaveRoomRequest.cs" />
     <Compile Include="Requests\LoginRequest.cs" />
+    <Compile Include="Requests\MakeAMoveRequest.cs" />
     <Compile Include="Requests\PostLoginRequest.cs" />
     <Compile Include="Requests\PreLoginRequest.cs" />
     <Compile Include="Requests\RegistrationRequest.cs" />
@@ -80,6 +82,7 @@
     <Compile Include="Responses\JoinRoomResponse.cs" />
     <Compile Include="Responses\LeaveRoomResponse.cs" />
     <Compile Include="Responses\LoginResponse.cs" />
+    <Compile Include="Responses\MakeAMoveResponse.cs" />
     <Compile Include="Responses\RegistrationResponse.cs" />
     <Compile Include="Responses\Response.cs" />
     <Compile Include="Responses\RoomCurrentStateResponse.cs" />
@@ -89,13 +92,13 @@
     <Compile Include="SubDTOs\RoomInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StormCommonData\StormCommonData.csproj">
-      <Project>{74f9a2fc-687c-4c7b-a051-93ef8ec4f144}</Project>
-      <Name>StormCommonData</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\StormCommonData\StormCommonData.csproj">
+      <Project>{a13319c1-dba7-42c8-b5d2-6d96b3316b01}</Project>
+      <Name>StormCommonData</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
