--- a/Projekat/PuzzleStorm/ServerLobby/ServerLobby.csproj
+++ b/Projekat/PuzzleStorm/ServerLobby/ServerLobby.csproj
@@ -71,7 +71,9 @@
     <Compile Include="Workers\LobbyWorker.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataLayer\DataLayer.csproj">
