--- a/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
+++ b/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broadcasts\BroadcastMessage.cs" />
+    <Compile Include="Broadcasts\GameUpdate.cs" />
     <Compile Include="Broadcasts\RoomsStateUpdate.cs" />
     <Compile Include="Broadcasts\RoomPlayerUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -89,13 +90,19 @@
     <Compile Include="Responses\SignOutResponse.cs" />
     <Compile Include="Responses\StartGameResponse.cs" />
     <Compile Include="Responses\StartRoomResponse.cs" />
+    <Compile Include="SubDTOs\Move.cs" />
     <Compile Include="SubDTOs\Player.cs" />
     <Compile Include="SubDTOs\RoomInfo.cs" />
+    <Compile Include="SubDTOs\Scoreboard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DataLayer\DataLayer.csproj">
+      <Project>{5E62366A-C52F-43C2-9A38-F49705C89166}</Project>
+      <Name>DataLayer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StormCommonData\StormCommonData.csproj">
       <Project>{a13319c1-dba7-42c8-b5d2-6d96b3316b01}</Project>
       <Name>StormCommonData</Name>
