--- a/Projekat/PuzzleStorm/StormCommonData/StormCommonData.csproj
+++ b/Projekat/PuzzleStorm/StormCommonData/StormCommonData.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\GamePlayUpdateType.cs" />
     <Compile Include="Enums\LogMessageType.cs" />
     <Compile Include="Enums\OperationStatus.cs" />
     <Compile Include="Enums\PuzzleDifficulty.cs" />
