--- a/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
+++ b/Projekat/PuzzleStorm/DTOLibrary/DTOLibrary.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Requests\AddPuzzlesRequest.cs" />
     <Compile Include="Requests\ChangeRoomPropertiesRequest.cs" />
     <Compile Include="Requests\ChangeStatusRequest.cs" />
+    <Compile Include="Requests\ContinueGameRequest.cs" />
+    <Compile Include="Requests\ContinueRoomRequest.cs" />
     <Compile Include="Requests\CreateRoomRequest.cs" />
     <Compile Include="Requests\CancelRoomRequest.cs" />
     <Compile Include="Requests\GetAllRoomsRequest.cs" />
@@ -76,6 +78,8 @@
     <Compile Include="Responses\AddPuzzlesResponse.cs" />
     <Compile Include="Responses\ChangeRoomPropertiesResponse.cs" />
     <Compile Include="Responses\ChangeStatusResponse.cs" />
+    <Compile Include="Responses\ContinueGameResponse.cs" />
+    <Compile Include="Responses\ContinueRoomResponse.cs" />
     <Compile Include="Responses\CreateRoomResponse.cs" />
     <Compile Include="Responses\CancelRoomResponse.cs" />
     <Compile Include="Responses\GetAllRoomsResponse.cs" />
