--- a/Projekat/PuzzleStorm/Client/Client.csproj
+++ b/Projekat/PuzzleStorm/Client/Client.csproj
@@ -806,6 +806,12 @@
     <Resource Include="Images\5\36\image_part_036.jpg" />
     <Resource Include="Images\5\Sky.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\qm.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\qm2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.2.2.1.0\build\net452\Fody.targets" Condition="Exists('..\packages\Fody.2.2.1.0\build\net452\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
